Added support to send an Image URL directly
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>